--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -6,12 +6,21 @@ $secondary-color: #00cdac;
 // $secondary-color: #793fc1;
 
 $white-color: #fff;
+$black-color: #000;
 
 $dark-grey: #333333;
+$mid-grey: #85818a;
+$light-grey: #E6E6E6;
 
 $dark-blue-text: #272341; // For Headings
 
+// FONT FAMILY
+$default-font: "Montserrat";
+$fancy-font: "Montserrat, sans serif";
+
+
 // FONT SIZE
-$default-font-size: 1.6rem;
+$default-font-size: 1.4rem;
 $big-font-size: 4rem;
 $mid-font-size: 2.5rem;
+$little-font-size: 1.2rem;
