--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -1,6 +1,6 @@
 #projects {
   background-color: $white-color;
-  color: $dark-blue-text;
+  color: $black-color;
   margin-top: -15rem;
   padding-top: 15rem;
 
@@ -17,30 +17,64 @@
     }
 
     .row {
-      margin-bottom: 8rem;
+      margin-bottom: 10rem;
+      margin-top:10rem;
 
       @include respond(phone) {
-        margin-bottom: 4rem;
+        margin-bottom: 6rem;
+        margin-top:6rem;
+        padding:0px !important;
       }
+    }
+
+    .row:nth-of-type(2) {
+      padding-right:50%;
+    }
+
+    .row:nth-of-type(3) {
+      padding-left:50%;
+    }
+
+    .row:nth-of-type(4) {
+      padding-right:50%;
+    }
+
+    .row:nth-of-type(5) {
+      padding-left:50%;
+    }
+
+    .row:nth-of-type(6) {
+      padding-right:50%;
+    }
+
+    .row:nth-of-type(7) {
+      padding-left:50%;
+    }
+
+    .row:nth-of-type(8) {
+      padding-right:50%;
     }
 
     &__text {
       text-align: left;
+      margin-top: 24px;
 
       @include respond(phone) {
         margin-bottom: 2.5rem !important;
+        margin-top: 0rem;
       }
       @include respond(tab-land) {
         margin-bottom: 4.8rem;
+        margin-top: 0rem;
       }
 
       &-title {
         font-weight: bold;
-        margin-bottom: 1.8rem;
-        font-size: $mid-font-size;
+        margin-bottom: 14px;
+        font-size: $default-font-size;
 
         @include respond(phone) {
-          font-size: 2rem;
+          font-size: $default-font-size;
         }
       }
 
@@ -50,7 +84,7 @@
     }
 
     &__image {
-      width: 90%;
+      width: 100%;
       margin: 0 auto;
 
       @include respond(tab-land) {
@@ -60,11 +94,9 @@
 
       & .thumbnail {
         border: none;
-        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-        transition: all 0.2s ease-out;
         box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
-        transition: 0.5s transform cubic-bezier(0.155, 1.105, 0.295, 1.12), 0.5s box-shadow,
-          0.5s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
+        transition: 0.5s transform cubic-bezier(0.155, 1.105, 0.295, 1.12), 
+          0.5s box-shadow, 0.5s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
 
         @include respond(phone) {
           border: 1px solid #d2d2d2;
