--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -3,6 +3,7 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: $default-font;
   text-align: center;
+  text-transform: uppercase;
 }
