--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;400&display=swap');
 
 h1 {
   font-weight: 700;
@@ -6,7 +7,7 @@ h1 {
 
 p,
 a {
-  font-family: 'Montserrat', sans-serif;
+  font-family: $default-font;
   font-size: $default-font-size;
 }
 
@@ -22,16 +23,32 @@ a:hover {
   transition: all 0.3s ease-in-out;
 }
 
+.section-title-hr {
+  width:34px;
+  margin-bottom:1.5rem;
+  height:1px;
+  background-color:#000;
+}
+
 .section-title {
-  margin: 0px;
-  margin-bottom: 4.5rem;
-  font-size: $big-font-size;
-  font-weight: bold;
+  font-family: $default-font;
+  font-size: $little-font-size;
+  letter-spacing: 0.1rem;
+  font-weight: 100;
+  text-align:left;
   text-transform: uppercase;
 
   @include respond(phone) {
-    font-size: 2.8rem;
+    font-size: 1.4rem;
   }
+}
+
+.section-superTitle {
+  font-family: $fancy-font;
+  font-size:15rem;
+  color:$light-grey;
+  text-align: left;
+  margin-top:5rem;
 }
 
 .dark-blue-text {
