--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -62,15 +62,15 @@
 
 /* Resume Style */
 .cta-btn--resume {
-  color: $white-color;
-  border: 2px solid $white-color;
+  color: $black-color;
+  border: 2px solid $black-color;
 
   &::after {
-    background: $white-color;
+    background: $black-color;
   }
 
   &:hover {
-    color: $secondary-color;
+    color: $white-color;
     text-decoration: none;
 
     &::after {
