--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: $dark-grey;
+  background-color: $white-color;
   color: $white-color;
   padding: 4.8rem 0;
 
@@ -32,7 +32,8 @@
     margin-bottom: 1rem;
     border: 0;
     width: 50%;
-    border-top: 2px solid rgba(255, 255, 255, 0.1);
+    border-top: 1px solid black;
+    opacity:0.3;
   }
 }
 
@@ -45,7 +46,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: $white-color;
+    color: $dark-grey;
     font-size: 3rem;
     width: 5rem;
     height: 5rem;
@@ -55,16 +56,5 @@
     &:hover {
       transform: translateY(-2px);
     }
-  }
-}
-
-.back-to-top i {
-  color: $white-color;
-  margin: 1rem 0 $default-font-size;
-  transition: all 0.2s ease-in;
-  cursor: pointer;
-
-  &:hover {
-    transform: translateY(-2px);
   }
 }
