--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -1,11 +1,9 @@
 #contact {
-  background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
-  -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
-  clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
-  padding: 15rem 0 10rem 0;
+  background-color:$white-color;
+  padding: 20rem 0 10rem 0;
   margin-top: -15rem;
   margin-bottom: -1px;
-  color: $white-color;
+  color: $black-color;
 
   @include respond(tab-land) {
     padding: 10rem 0;
@@ -20,7 +18,18 @@
     backface-visibility: hidden;
 
     &__text {
-      margin-bottom: 2.5rem;
+      margin-bottom: 3.5rem;
+    }
+
+    &__text,
+    p {
+      font-size:3.6rem;
+    }
+
+    &__text.fr {
+      margin-top: -3.5rem;
+      font-size:3.2rem;
+      color:#85818a;
     }
 
     &__text,
