--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,65 +1,146 @@
 #hero {
-  min-height: 100vh;
-  height: 100vh;
   display: flex;
+  margin-top: 15rem;
   align-items: center;
   border-bottom: 0px;
   background: $white-color;
-  font-weight: 400;
-  color: $dark-blue-text;
-  padding: 0rem 5.6rem;
-  margin-bottom: 0;
+  font-weight: 100;
+  color: $black-color;
+  padding: 0rem 25rem;
+  margin-bottom: 15rem;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   z-index: -1;
-
-  // If you want to set a background image on the hero section, uncomment these with yout custom image
-
-  /* background: url("/src/assets/[your-image].png");
-  background-position: center;
-  background-size: cover; */
-
+  
+  @include respond(tab-land) {
+    padding: 0rem $default-font-size;
+  }
+  @include respond(tab-port) {
+    padding: 0rem $default-font-size;
+  }
   @include respond(phone) {
     padding: 0rem $default-font-size;
   }
 
-  .hero-title {
-    font-size: 5.6rem;
-    font-weight: 700;
-    margin-bottom: 3.2rem;
+  .section-title-container {
+    margin-bottom:5rem;
+  }
+
+  .hero-name {
+    width:100%;
+    font-family: $fancy-font;
+    font-size: 8rem;
+    font-weight: 100;
+    letter-spacing: -0.1rem;
+    line-height: 7.4rem;
     text-align: left;
+    text-transform: uppercase;
+    background: -webkit-linear-gradient( #333, #000);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 
     @include respond(tab-land) {
-      font-size: 4rem;
+      width: 100%;
+      line-height: 7.4rem;
     }
     @include respond(tab-port) {
-      font-size: 3.6rem;
-      text-align: center;
+      width: 100%;
+      line-height: 7.4rem;
     }
     @include respond(phone) {
-      font-size: 3.5rem;
-      line-height: 1.5;
+      width: 100%;
+      font-size: 6rem;
+      line-height: 6rem;
     }
     @include respond(phone-xs) {
-      font-size: 2.8rem;
+      width: 100%;
+      font-size: 6rem;
+      line-height: 6rem;
     }
   }
 
-  .hero-cta {
-    display: flex;
+  .hero-title-en {
+    font-family: $default-font;
+    font-weight: 100;
+    margin-top: 2rem;
+    text-align: left;
+    color:$black-color;
+  }
 
+  .hero-title-fr {
+    font-family: $default-font;
+    font-weight: 100;
+    text-align: left;
+    font-size:1rem;
+    letter-spacing:2px;
+    color:#85818a;
+    margin-bottom: 5.4rem;
+  }
+
+  .hero-text-container {
+    margin-left:10%;
+  }
+
+  .hero-text {
+    width:45%;
+    margin-bottom:5rem;
+    font-family: $default-font;
+    font-size:1.2rem;
+    font-weight: 100;
+    text-align:left;
+
+    @include respond(tab-land) {
+      width:60%;
+    }
     @include respond(tab-port) {
-      justify-content: center;
+      width:60%;
     }
-
-    & a {
-      font-size: 2.4rem;
-
-      @include respond(phone) {
-        font-size: 2rem;
-      }
+    @include respond(phone) {
+      width:70%;
     }
+    @include respond(phone-xs) {
+      width:70%;
+    }
+  }
+
+  .en {
+    color:$black-color;
+  }
+
+  .fr {
+    color:#85818a;
+  }
+
+  .hero-experience-list {
+    list-style-type: none;
+    text-align:left;
+    padding:0;
+    margin-left:10%;
+  }
+
+  .hero-experience-list > li {
+    margin-bottom:24px;
+  }
+
+  .hero-experience-date {
+    display:inline-block;
+    vertical-align: top;
+    width:20%;
+  }
+
+  .hero-experience-text {
+    display:inline-block;
+    width:70%;
+  } 
+
+  .hero-experience-text > div {
+    margin-bottom:24px;
+  } 
+
+  .hero-experience-p {
+    margin-bottom:7px;
+    font-size:$default-font-size;
   }
 }
