--- a/src/style/layout/_navbar.scss
+++ b/src/style/layout/_navbar.scss
@@ -13,12 +13,12 @@
 }
 
 .navbar-left {
-  margin:50px 20px;
+  padding:50px 20px;
   text-align:left;
 }
 
 .navbar-right {
-  margin:0px 50px 50px;
+  margin-right: 20px;
   text-align:right;
 }
 
