--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -107,3 +107,15 @@
     }
   }
 }
+
+@media (max-width: 37.5em) {
+  #projects .project-wrapper__image .thumbnail {
+      border: 1px solid #d2d2d2;
+      box-shadow: none;
+      margin-bottom: 1.4rem;
+  }
+  #projects .project-wrapper__text {
+    margin-bottom: 0.5rem !important;
+    margin-top: 0rem;
+  }
+}
