--- a/src/style/layout/_navbar.scss
+++ b/src/style/layout/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  position:fixed;
+  position:absolute;;
   top:0;
   width:100%;
   background-color:transparent;
@@ -15,6 +15,7 @@
 .navbar-left {
   padding:50px 20px;
   text-align:left;
+  cursor:pointer;
 }
 
 .navbar-right {
@@ -41,12 +42,13 @@
 }
 
 .back-to-top i {
-  position:fixed;
-  bottom:14px;
-  right:34px;
-  color: $dark-grey;
-  margin: 1rem 0 $default-font-size;
-  transition: all 0.2s ease-in;
+  position: fixed;
+  bottom: 24px;
+  right: 34px;
+  z-index: 100;
+  color: #333;
+  margin: 1rem 0 1.4rem;
+  transition: all .2s ease-in;
   cursor: pointer;
 
   &:hover {
