--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -92,16 +92,16 @@
     text-align:left;
 
     @include respond(tab-land) {
-      width:60%;
+      width:70%;
     }
     @include respond(tab-port) {
-      width:60%;
+      width:70%;
     }
     @include respond(phone) {
-      width:70%;
+      width:80%;
     }
     @include respond(phone-xs) {
-      width:70%;
+      width:80%;
     }
   }
 
@@ -118,6 +118,10 @@
     text-align:left;
     padding:0;
     margin-left:10%;
+
+    @include respond(phone) {
+      margin-left:0%;
+    } 
   }
 
   .hero-experience-list > li {
