Add content projects

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -2,10 +2,7 @@
 $primary-color: #02aab0;
 $secondary-color: #00cdac;
 
-// $primary-color: #7f449d;
-// $secondary-color: #793fc1;
-
-$white-color: #fff;
+$white-color: #F4F3F5;
 $black-color: #000;
 
 $dark-grey: #333333;
