--- a/src/style/layout/_navbar.scss
+++ b/src/style/layout/_navbar.scss
@@ -3,7 +3,7 @@
   top:0;
   width:100%;
   background-color:transparent;
-  color:$white-color;
+  color:$black-color;
   z-index:10;
   text-transform: uppercase;
 }
@@ -12,16 +12,19 @@
   color:$black-color;
 }
 
-.navbar-left {
-  padding:50px 20px;
-  text-align:left;
-  cursor:pointer;
-}
-
 .navbar-right {
   margin-right: 20px;
   text-align:right;
 }
+
+#TobyLogo {
+  width:100px;
+
+  @include respond(phone) {
+    width: 56px;
+    margin-left: 14px;
+  }
+} 
 
 .dot {
   height: 14px;
