--- a/src/style/sections/_welcome.scss
+++ b/src/style/sections/_welcome.scss
@@ -31,20 +31,22 @@
 .welcome-little-text {
     position: absolute;
     bottom: 15vh;
-    right: 35vh;
-    font-size: 2.4rem;
+    right: 45vh;
+    font-size: 1.8rem;
 
     @include respond(tab-land) {
         position: absolute;
-        bottom: 15vh;
-        right: 35vh;
-        font-size: 1.8rem;
+        bottom: 65px;
+        right: 200px;
+        width: 250px;
+        font-size: 1.6rem;
     }
     @include respond(tab-port) {
         position: absolute;
-        bottom: 15vh;
-        right: 35vh;
-        font-size: 1.8rem;
+        bottom: 275px;
+        right: 50px;
+        width: 250px;
+        font-size: 1.6rem;
     }
     @include respond(phone) {
         position: inherit;
