--- a/src/style/templates/_projects-template.scss
+++ b/src/style/templates/_projects-template.scss
@@ -1,3 +1,30 @@
-.Projects-template-img {
+.projects-template-img {
     width:100%;
+}
+
+.projects-template-text {
+    text-align:left;
+    padding: 50px;
+    height:100vh;
+    background-color: white;
+}
+
+.back-button i {
+    font-size:2rem;
+    color:$black-color;
+}
+
+.back-button i:hover {
+    font-size:2rem;
+    color:$black-color;
+    opacity: 0.6;
+}
+
+h1 {
+    margin-top: 2.4rem;
+    margin-bottom: 2.4rem;
+}
+
+h2 {
+    margin-bottom: 2.4rem;
 }
