--- a/src/style/layout/_navbar.scss
+++ b/src/style/layout/_navbar.scss
@@ -1,61 +1,32 @@
-.navbar {
-  position:absolute;;
-  top:0;
-  width:100%;
-  background-color:transparent;
-  color:$black-color;
-  z-index:10;
-  text-transform: uppercase;
-}
-
-.navbar.active {
-  color:$black-color;
-}
-
-.navbar-right {
-  margin-right: 20px;
-  text-align:right;
-}
-
 #TobyLogo {
-  width: 100px;
-  margin-left: 24px;
-
-  @include respond(phone) {
-    width: 56px;
-    margin-left: 14px;
-  }
-} 
-
-.dot {
-  height: 14px;
-  width: 14px;
-  margin: 0px 0px 14px;
-  background-color: #00E676;
-  border-radius: 50%;
-  display: block;
+  width: 70px;
+  padding: 14px;
 }
 
-.status-container {
+.logo-container {
+  width: 70px;
+  height: 70px;
+  background-color: $black-color;
+}
+
+.Nav {
   width: 100%;
-}
-
-.status-text.scrolled {
-  transition: background-color 200ms linear;
-  color: black;
-}
-
-.back-to-top i {
-  position: fixed;
-  bottom: 24px;
-  right: 34px;
-  z-index: 100;
-  color: #333;
-  margin: 1rem 0 1.4rem;
-  transition: all .2s ease-in;
-  cursor: pointer;
-
-  &:hover {
-    transform: translateY(-2px);
+  height: 70px;
+  padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 24px;
+  top: 0px;
+  z-index: 10;
+  @media (max-width: 768px) {
+    padding: 0 18px;
+    margin-top:0px;
   }
+}
+
+.active {
+  position:fixed;
+  background-color:white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  margin-top: 0px;
 }
