--- a/src/style/sections/_welcome.scss
+++ b/src/style/sections/_welcome.scss
@@ -30,8 +30,8 @@
 
 .welcome-little-text {
     position: absolute;
-    bottom: 15vh;
-    right: 45vh;
+    bottom: 15%;
+    right: 25%;
     font-size: 1.8rem;
 
     @include respond(tab-land) {
