changing user flow

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -13,8 +13,8 @@ $light-grey: #E6E6E6;
 $dark-blue-text: #272341; // For Headings
 
 // FONT FAMILY
-$default-font: "Montserrat";
-$fancy-font: "Montserrat, sans serif";
+$default-font: 'Rubik', sans-serif;
+$fancy-font: "Abril Fatface", cursive;
 
 
 // FONT SIZE
