--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Rubik&display=swap" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
 h1 {
   font-weight: 700;
