--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -4,7 +4,7 @@ html {
 
 body {
   font-family: $default-font;
+  font-weight: 100;
   text-align: center;
-  text-transform: uppercase;
   background: $white-color;
 }
