--- a/src/style/layout/_navbar.scss
+++ b/src/style/layout/_navbar.scss
@@ -1,24 +1,16 @@
-#TobyLogo {
-  width: 70px;
-  padding: 14px;
+.name-navbar {
+  font-size:18px;
+  font-weight: 500;
 }
 
-.logo-container {
-  width: 70px;
-  height: 70px;
-  background-color: $black-color;
-}
-
-.Nav {
-  width: 100%;
-  height: 70px;
-  padding: 0 40px;
-  position:fixed;
+.Navbar {
+  height: 100px;
+  padding: 0px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 24px;
-  top: 0px;
+  text-transform: uppercase;
   z-index: 10;
   @media (max-width: 768px) {
     padding: 0 18px;
