--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -3,7 +3,7 @@ $primary-color: #02aab0;
 $secondary-color: #00cdac;
 
 
-$white-color: #F4F3F5;
+$white-color: #FFF;
 $black-color: #000;
 
 $dark-grey: #333333;
@@ -13,8 +13,8 @@ $light-grey: #E6E6E6;
 $dark-blue-text: #272341; // For Headings
 
 // FONT FAMILY
-$default-font: 'Rubik', sans-serif;
-$fancy-font: "Abril Fatface", cursive;
+$default-font: 'Roboto', sans-serif;
+$fancy-font: 'Overpass', sans-serif;
 
 
 // FONT SIZE
