--- a/src/style/sections/_welcome.scss
+++ b/src/style/sections/_welcome.scss
@@ -1,43 +1,178 @@
-.welcome-text {
-    font-family: $fancy-font;
-    text-transform: uppercase;
-    font-size: 54px;
-    font-weight:100;
-    text-align: left;
-    margin-bottom:24px;
-    letter-spacing: 3px;
+#welcome {
+    padding: 0 10rem;
+    margin-top: 5rem;
 
+    @include respond(big-desktop) {
+     padding: 0 15rem;
+     margin-top: 10rem;
+    }
     @include respond(tab-land) {
-        font-size: 14rem;
-        line-height: 14rem;
+     padding: 0 5rem;
+     margin-top: 10rem;
     }
     @include respond(tab-port) {
-        font-size: 12rem;
-        line-height: 12rem;
+     padding: 0 10rem;
+     margin-top: 5rem;
     }
     @include respond(phone) {
-        font-size: 5rem;
-        line-height: 5rem;
+     padding: 0 2rem;
+     margin-top: 5rem;
     }
     @include respond(phone-xs) {
-        font-size: 5rem;
-        line-height: 5rem;
+     padding: 0 2rem;
+     margin-top: 5rem;
+    }
+}
+ 
+.name-text {
+    font-family: $fancy-font;
+    font-size: 10rem;
+    font-weight: 800;
+    text-align: left;
+    background: -webkit-linear-gradient( #333, #000);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    @include respond(big-desktop) {
+     font-size: 15rem;
+     line-height: 15rem;
+    }
+    @include respond(tab-land) {
+     font-size: 10rem;
+    }
+    @include respond(tab-port) {
+     font-size: 10rem;
+    }
+    @include respond(phone) {
+     font-size: 7rem;
+     line-height: 7rem;
+     font-weight: 600;
+    }
+    @include respond(phone-xs) {
+     font-size: 7rem;
+     line-height: 7rem;
+     font-weight: 600;
     }
 }
 
-.welcome-text-little {
-    font-size:18px;
+.skills-list {
     text-align: left;
-    text-transform: none;
-    margin-top: 24px;
+    font-size: 4rem;
+    font-weight: 400;
+    list-style: square;
+    margin: 10rem 0;
+
+    @include respond(big-desktop) {
+     font-size: 4rem;
+     margin: 10rem 0;
+    }
+    @include respond(tab-land) {
+     font-size: 4rem;
+     margin: 10rem 0;
+    }
+    @include respond(tab-port) {
+     font-size: 4rem;
+     margin: 10rem 0;
+    }
+    @include respond(phone) {
+     font-size: 2rem;
+     margin: 5rem 0;
+    }
+    @include respond(phone-xs) {
+     font-size: 2rem;
+     margin: 5rem 0;
+    }
 }
 
-.span-green {
-    color:#00E676;
+.baseline-text {
+    font-size: 3rem;
+    font-weight: 400;
+    text-align: left;
+
+    @include respond(big-desktop) {
+     font-size: 4rem;
+    }
+    @include respond(tab-land) {
+     font-size: 4rem;
+    }
+    @include respond(tab-port) {
+     font-size: 4rem;
+    }
+    @include respond(phone) {
+     font-size: 2rem;
+    }
+    @include respond(phone-xs) {
+     font-size: 2rem;
+    }
 }
 
-.hr-welcome {
-    width:10%;
-    margin:0px;
-    border-color:#000;
+.localization-text {
+    font-size: 2rem;
+    font-weight: 400;
+    text-align: left;
+
+    @include respond(big-desktop) {
+     font-size: 3rem;
+    }
+    @include respond(tab-land) {
+     font-size: 3rem;
+    }
+    @include respond(tab-port) {
+     font-size: 3rem;
+    }
+    @include respond(phone) {
+     font-size: 1.4rem;
+    }
+    @include respond(phone-xs) {
+     font-size: 1.4rem;
+    }
 }
+
+.openToWork-container {
+    position:absolute;
+    left:40%;
+
+    @include respond(big-desktop) {
+     left:40%;
+    }
+    @include respond(tab-land) {
+     left:40%;
+    }
+    @include respond(tab-port) {
+     left:40%;
+    }
+    @include respond(phone) {
+     display:none;
+    }
+    @include respond(phone-xs) {
+     display:none;
+    }
+}
+
+
+.openToWork-img {
+    animation-duration: 15s;
+    animation-delay: 0s;
+    animation-name: rotate-img;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+
+    @include respond(phone) {
+     width:60%;
+    }
+    @include respond(phone-xs) {
+     width:60%;
+    }
+}
+  
+  @keyframes rotate-img {
+    0% {
+     -ms-transform: rotate(0deg); /* IE 9 */
+     transform: rotate(0deg);
+    }
+  
+    100% {
+     -ms-transform: rotate(360deg); /* IE 9 */
+     transform: rotate(360deg);
+    }
+  }
