--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,3 +1,5 @@
+@import url('<link href="https://fonts.googleapis.com/css2?family=Overpass&family=Roboto&display=swap" rel="stylesheet">');
+
 // COLORS
 $primary-color: #02aab0;
 $secondary-color: #00cdac;
