--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -1,5 +1,3 @@
-@import url('<link href="https://fonts.googleapis.com/css2?family=Overpass&family=Roboto&display=swap" rel="stylesheet">');
-
 h1 {
   font-weight: 700;
 }
@@ -23,7 +21,7 @@ a:hover {
 }
 
 .section-title-hr {
-  width:34px;
+  width:54px;
   margin-bottom:1.5rem;
   height:1px;
   background-color:#000;
@@ -32,6 +30,7 @@ a:hover {
 .section-title {
   font-family: $default-font;
   font-size: $big-font-size;
+  font-weight: 400 !important;
   letter-spacing: 0.1rem;
   font-weight: 100;
   text-align:left;
