--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -1,6 +1,6 @@
 #projects {
   color: $black-color;
-  padding: 0 15rem;
+  padding: 0 10rem;
 
   @include respond(big-desktop) {
     padding: 0 15rem;
@@ -23,6 +23,12 @@
     margin-top: 5rem;
    }
 
+  img {
+    @include respond(phone) {
+      object-position: right center !important;
+    }
+  }
+
   .project-wrapper {
     margin-bottom: 15rem;
 
@@ -35,27 +41,21 @@
       margin-top:10rem;
 
       @include respond(phone) {
-        margin-bottom: 6rem;
-        margin-top:6rem;
+        margin-bottom: 3rem;
+        margin-top: 3rem;
         padding:0px !important;
       }
     }
 
     &__text {
       position: absolute;
-      width: 400px;
-      top: 15%;
-      left: 5%;
+      top: 0;
+      width: 100%;
+      height:100%;
       text-align: left;
-      margin-top: 24px;
 
       @include respond(phone) {
-        position: absolute;
-        width: 50%;
-        top: 24px;
-        left: 24px;
-        text-align: left;
-        margin-top: 24px;
+        display:none;
       }
       @include respond(tab-land) {
         margin-top: 0rem;
@@ -64,7 +64,7 @@
       &-title {
         font-weight: bold;
         margin-bottom: 24px;
-        font-size: 4rem;
+        font-size: 3rem;
         font-family: $fancy-font;
 
         @include respond(phone) {
@@ -79,6 +79,12 @@
       & p > a {
         color: $secondary-color;
       }
+    }
+
+    &__verticalAlign {
+      width: 35%;
+      padding-top: 10%;
+      padding-left: 5%;
     }
 
     &__image {
@@ -107,13 +113,7 @@
 
       & .thumbnail div {
         @include respond(phone) {
-          height:500px;
-        }
-      }
-
-      & .thumbnail img {
-        @include respond(phone) {
-          left:30% !important;
+          height:300px;
         }
       }
     }
@@ -124,7 +124,8 @@
   width:180px;
   height:48px;
   margin-top: 14px;
-  padding: 1.4rem 4.4rem;
+  padding: 1.4rem;
+  text-align:center;
   font-weight: 200;
   color: $black-color;
   border: 1px solid #000;
