--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -1,3 +1,6 @@
+@import url('<link href="https://fonts.googleapis.com/css2?family=Overpass&display=swap" rel="stylesheet">');
+@import url('<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">');
+
 h1 {
   font-weight: 700;
 }
@@ -38,7 +41,8 @@ a:hover {
   margin-bottom:2rem;
 
   @include respond(phone) {
-    font-size: 4rem;
+    margin-top:10rem;
+    font-size: 3rem;
   }
 }
 
