--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,153 +1,10 @@
 #hero {
-  display: flex;
-  margin-top: 5rem;
-  align-items: center;
-  border-bottom: 0px;
-  background: $white-color;
-  font-weight: 100;
-  color: $black-color;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  
-  @include respond(tab-land) {
-    padding: 0rem $default-font-size;
-  }
-  @include respond(tab-port) {
-    padding: 0rem $default-font-size;
-  }
-  @include respond(phone) {
-    padding: 0rem $default-font-size;
-  }
+  margin-bottom: 20rem;
+}
 
-  .heroImg {
-    position: absolute;
-    right:15%;
-    width:450px;
-
-    @include respond(phone) {
-      position: inherit;
-      align-items: center;;
-      width: 100%;
-      margin-bottom: 10vh;
-    }
-  }
-
-  .section-title-container {
-    margin-bottom:5rem;
-  }
-
-  .hero-name {
-    width:100%;
-    font-family: $fancy-font;
-    font-size: 8rem;
-    font-weight: 100;
-    letter-spacing: -0.1rem;
-    line-height: 7.4rem;
-    text-align: left;
-    text-transform: uppercase;
-    background: -webkit-linear-gradient( #333, #000);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-
-    @include respond(tab-land) {
-      width: 100%;
-      line-height: 7.4rem;
-    }
-    @include respond(tab-port) {
-      width: 100%;
-      line-height: 7.4rem;
-    }
-    @include respond(phone) {
-      width: 100%;
-      font-size: 6rem;
-      line-height: 6rem;
-    }
-    @include respond(phone-xs) {
-      width: 100%;
-      font-size: 6rem;
-      line-height: 6rem;
-    }
-  }
-
-  .hero-title-en {
-    font-family: $default-font;
-    font-weight: 100;
-    margin-top: 2rem;
-    text-align: left;
-    color:$black-color;
-  }
-
-  .hero-title-fr {
-    font-family: $default-font;
-    font-weight: 100;
-    text-align: left;
-    font-size:1rem;
-    letter-spacing:2px;
-    color:#85818a;
-    margin-bottom: 5.4rem;
-  }
-
-  .hero-text-container {
-    margin-left:10%;
-  }
-
-  .hero-text {
-    width:45%;
-    margin-bottom:5rem;
-    font-family: $default-font;
-    font-size:1.2rem;
-    font-weight: 100;
-    text-align:left;
-
-    @include respond(tab-land) {
-      width:70%;
-    }
-    @include respond(tab-port) {
-      width:70%;
-    }
-    @include respond(phone) {
-      width:80%;
-    }
-    @include respond(phone-xs) {
-      width:80%;
-    }
-  }
-
-  .hero-experience-list {
-    list-style-type: none;
-    text-align:left;
-    padding:0;
-    margin-left:10%;
-
-    @include respond(phone) {
-      margin-left:0%;
-    } 
-  }
-
-  .hero-experience-list > li {
-    margin-bottom:24px;
-  }
-
-  .hero-experience-date {
-    display:inline-block;
-    vertical-align: top;
-    width:20%;
-  }
-
-  .hero-experience-text {
-    display:inline-block;
-    width:70%;
-  } 
-
-  .hero-experience-text > div {
-    margin-bottom:24px;
-  } 
-
-  .hero-experience-p {
-    margin-bottom:7px;
-    font-size:$default-font-size;
-  }
+.hero-text {
+  font-size: 3rem;
+  font-weight: 400;
+  text-align: left;
+  margin: 5rem 0;
 }
