--- a/src/style/layout/_sections.scss
+++ b/src/style/layout/_sections.scss
@@ -1,10 +1,22 @@
 // Section
 section {
-  padding: 10rem 0rem;
+  padding: 0 10rem;
+  margin-top: 10rem;
 
+  @include respond(big-desktop) {
+   padding: 0 15rem;
+   margin-top: 10rem;
+  }
+  @include respond(tab-land) {
+   padding: 0 8rem;
+   margin-top: 8rem;
+  }
+  @include respond(tab-port) {
+   padding: 0 5rem;
+   margin-top: 8rem;
+  }
   @include respond(phone) {
-    border: none;
-    padding-left: 1rem;
-    padding-right: 1rem;
+   padding: 0 2rem;
+   margin-top: 3rem;
   }
 }
