--- a/src/style/sections/_welcome.scss
+++ b/src/style/sections/_welcome.scss
@@ -1,86 +1,88 @@
-#welcome {
-    padding: 0 10rem;
-    margin-top: 8rem;
-
-    @include respond(big-desktop) {
-     padding: 0 15rem;
-     margin-top: 10rem;
-    }
-    @include respond(tab-land) {
-     padding: 0 5rem;
-     margin-top: 8rem;
-    }
-    @include respond(tab-port) {
-     padding: 0 10rem;
-     margin-top: 5rem;
-    }
-    @include respond(phone) {
-     padding: 0 2rem;
-     margin-top: 5rem;
-    }
-    @include respond(phone-xs) {
-     padding: 0 2rem;
-     margin-top: 5rem;
-    }
-}
- 
 .name-text {
     font-family: $fancy-font;
     font-size: 10rem;
+    line-height: 10rem;
     font-weight: 800;
     text-align: left;
     background: -webkit-linear-gradient( #333, #000);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-
+    
     @include respond(big-desktop) {
      font-size: 15rem;
      line-height: 15rem;
     }
     @include respond(tab-land) {
      font-size: 10rem;
+     line-height: 10rem;
     }
     @include respond(tab-port) {
      font-size: 10rem;
+     line-height: 10rem;
     }
     @include respond(phone) {
-     font-size: 7rem;
-     line-height: 7rem;
-     font-weight: 600;
-    }
-    @include respond(phone-xs) {
-     font-size: 7rem;
-     line-height: 7rem;
+     font-size: 6rem;
+     line-height: 6rem;
      font-weight: 600;
     }
 }
 
-.skills-list {
+.job-container {
+    margin: 10rem 0;
+
+    @include respond(phone) {
+    margin: 3rem 0;
+    }
+}
+
+.job {
+    display: block;
     text-align: left;
-    font-size: 4rem;
+}
+
+.job p {
+    font-size: 3rem;
     font-weight: 400;
-    list-style: square;
-    margin: 8rem 0;
+    display:inline-block;
 
     @include respond(big-desktop) {
      font-size: 4rem;
-     margin: 10rem 0;
     }
     @include respond(tab-land) {
      font-size: 4rem;
-     margin: 8rem 0;
     }
     @include respond(tab-port) {
      font-size: 4rem;
-     margin: 8rem 0;
     }
     @include respond(phone) {
      font-size: 2rem;
-     margin: 5rem 0;
     }
     @include respond(phone-xs) {
      font-size: 2rem;
-     margin: 5rem 0;
+    }
+}
+
+.dot {
+    display:inline-block;
+    width:24px;
+    height: 24px;
+    margin-right:24px;
+    vertical-align: text-bottom;
+
+    @include respond(phone) {
+    width: 14px;
+    height: 14px;
+    margin-right:14px;
+    }
+}
+
+.dot svg {
+    width:24px;
+    height: 24px;
+
+    @include respond(phone) {
+    width: 14px;
+    height: 14px;
     }
 }
 
@@ -93,16 +95,13 @@
      font-size: 4rem;
     }
     @include respond(tab-land) {
-     font-size: 4rem;
+     font-size: 3rem;
     }
     @include respond(tab-port) {
-     font-size: 4rem;
+     font-size: 3rem;
     }
     @include respond(phone) {
-     font-size: 2rem;
-    }
-    @include respond(phone-xs) {
-     font-size: 2rem;
+     font-size: 1.8rem;
     }
 }
 
@@ -115,15 +114,12 @@
      font-size: 3rem;
     }
     @include respond(tab-land) {
-     font-size: 3rem;
+     font-size: 2rem;
     }
     @include respond(tab-port) {
-     font-size: 3rem;
+     font-size: 2rem;
     }
     @include respond(phone) {
-     font-size: 1.4rem;
-    }
-    @include respond(phone-xs) {
      font-size: 1.4rem;
     }
 }
@@ -136,16 +132,13 @@
      left:40%;
     }
     @include respond(tab-land) {
-     left:40%;
+     left:50%;
     }
     @include respond(tab-port) {
-     left:40%;
+     display:none;
     }
     @include respond(phone) {
      display:none;
-    }
-    @include respond(phone-xs) {
-     display:none
     }
 }
 
