--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -1,5 +1,5 @@
 #projects {
-
+  
   img {
     @include respond(tab-port) {
       object-position: right center !important;
@@ -11,6 +11,7 @@
 
   .project-wrapper {
     margin-bottom: 20rem;
+    text-align: center;
 
     @include respond(phone) {
       margin-bottom: 0rem;
@@ -21,7 +22,7 @@
       margin-top:5rem;
 
       @include respond(big-desktop) {
-        margin-bottom:10rem;
+        margin-bottom:20rem;
         margin-top:10rem;
        }
 
@@ -33,35 +34,22 @@
     }
 
     &__text {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      height:100%;
-      text-align: left;
-
-      @include respond(tab-port) {
-        display:none;
-      }
-      @include respond(phone) {
-        display:none;
-      }
 
       &-title {
         font-weight: bold;
-        margin-bottom: 24px;
-        font-size: 3rem;
+        font-size: 1.8rem;
         font-family: $fancy-font;
-
-        @include respond(tab-land) {
-          font-size: 2.4rem;
-        }
+        margin-top: 4rem;
+        margin-bottom: 1rem;
       }
 
       & p {
-        font-size:1.8rem;
-        @include respond(tab-land) {
-          font-size: 1.6rem;
-        }
+        font-size:1.4rem;
+      }
+
+      & p:nth-child(3) {
+        font-size:1.4rem;
+        font-style: italic;
       }
 
       & p > a {
@@ -69,20 +57,9 @@
       }
     }
 
-    &__verticalAlign {
-      width: 35%;
-      padding-top: 10%;
-      padding-left: 5%;
-
-      @include respond(tab-land) {
-        padding-top: 5%;
-        padding-left: 5%;
-      }
-    }
-
     &__image {
       width: 100%;
-      box-shadow: 0 16px 30px 0 rgba(33,33,33,.2);
+      max-width:960px;
       margin: 0 auto;
 
       @include respond(phone) {
@@ -93,40 +70,32 @@
       & .thumbnail {
         border: none;
       }
-
-      & .thumbnail div {
-        @include respond(tab-port) {
-          height:400px;
-        }
-        @include respond(phone) {
-          height:300px;
-        }
-      }
     }
   }
 }
 
-.cta-btn--project {
-  width:180px;
-  height:48px;
-  margin-top: 14px;
-  padding: 1.4rem;
-  text-align:center;
-  font-weight: 200;
-  color: $black-color;
-  border: 1px solid #000;
-  font-size: 1.8rem;
+.cool-link {
+  margin-top:3rem;
+  text-transform: uppercase;
+  display: inline-block;
+  color: #000;
+  text-decoration: none;
+}
 
-  &::after {
-    background: $black-color;
-  }
+.cool-link:hover {
+  color: #000;
+  text-decoration: none;
+}
 
-  &:hover {
-    color: $white-color;
-    text-decoration: none;
+.cool-link::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #000;
+  transition: width .3s;
+}
 
-    &::after {
-      width: 100%;
-    }
-  }
+.cool-link:hover::after {
+  width: 100%;
 }
