--- a/src/style/sections/_welcome.scss
+++ b/src/style/sections/_welcome.scss
@@ -1,171 +1,47 @@
-.name-text {
-    font-family: $fancy-font;
-    font-size: 10rem;
-    line-height: 10rem;
-    font-weight: 800;
-    text-align: left;
-    background: -webkit-linear-gradient( #333, #000);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    
-    @include respond(big-desktop) {
-     font-size: 15rem;
-     line-height: 15rem;
-    }
-    @include respond(tab-land) {
-     font-size: 10rem;
-     line-height: 10rem;
-    }
-    @include respond(tab-port) {
-     font-size: 10rem;
-     line-height: 10rem;
-    }
-    @include respond(phone) {
-     font-size: 6rem;
-     line-height: 6rem;
-     font-weight: 600;
+#welcome {
+    margin:0;
+    padding:3rem 0;
+
+    .logo-container {
+        margin-bottom:2rem;
     }
 }
 
-.job-container {
-    margin: 10rem 0;
+.fixed-name-container {
+    width: 100%;
+    height: 100%;
+    position: fixed;
 
-    @include respond(phone) {
-    margin: 3rem 0;
+    div:nth-child(1) {
+        position: absolute;
+        left:5rem;
+        top:45%;
+
+        p {
+            font-size:2.4rem;
+            display: inline-block;
+            transform-origin: 0 0;
+            transform: rotate(90deg);
+            -webkit-transform: rotate(90deg);
+            -moz-transform: rotate(90deg);
+            -o-transform: rotate(90deg); 
+        }
+
+    }
+
+    div:nth-child(2) {
+        position: absolute;
+        right:-20px;
+        top:55%;
+
+        p {
+            font-size:2.4rem;
+            display: inline-block;
+            transform-origin: 0 0;
+            transform: rotate(-90deg);
+            -webkit-transform: rotate(-90deg);
+            -moz-transform: rotate(-90deg);
+            -o-transform: rotate(-90deg); 
+        }
     }
 }
-
-.job {
-    display: block;
-    text-align: left;
-}
-
-.job p {
-    font-size: 3rem;
-    font-weight: 400;
-    display:inline-block;
-
-    @include respond(big-desktop) {
-     font-size: 4rem;
-    }
-    @include respond(tab-land) {
-     font-size: 4rem;
-    }
-    @include respond(tab-port) {
-     font-size: 4rem;
-    }
-    @include respond(phone) {
-     font-size: 2rem;
-    }
-    @include respond(phone-xs) {
-     font-size: 2rem;
-    }
-}
-
-.dot {
-    display:inline-block;
-    width:24px;
-    height: 24px;
-    margin-right:24px;
-    vertical-align: text-bottom;
-
-    @include respond(phone) {
-    width: 14px;
-    height: 14px;
-    margin-right:14px;
-    }
-}
-
-.dot svg {
-    width:24px;
-    height: 24px;
-
-    @include respond(phone) {
-    width: 14px;
-    height: 14px;
-    }
-}
-
-.baseline-text {
-    font-size: 3rem;
-    font-weight: 400;
-    text-align: left;
-
-    @include respond(big-desktop) {
-     font-size: 4rem;
-    }
-    @include respond(tab-land) {
-     font-size: 3rem;
-    }
-    @include respond(tab-port) {
-     font-size: 3rem;
-    }
-    @include respond(phone) {
-     font-size: 1.8rem;
-    }
-}
-
-.localization-text {
-    font-size: 2rem;
-    font-weight: 400;
-    text-align: left;
-
-    @include respond(big-desktop) {
-     font-size: 3rem;
-    }
-    @include respond(tab-land) {
-     font-size: 2rem;
-    }
-    @include respond(tab-port) {
-     font-size: 2rem;
-    }
-    @include respond(phone) {
-     font-size: 1.4rem;
-    }
-}
-
-.openToWork-container {
-    position:absolute;
-    left:40%;
-
-    @include respond(big-desktop) {
-     left:40%;
-    }
-    @include respond(tab-land) {
-     left:50%;
-    }
-    @include respond(tab-port) {
-     display:none;
-    }
-    @include respond(phone) {
-     display:none;
-    }
-}
-
-
-.openToWork-img {
-    animation-duration: 15s;
-    animation-delay: 0s;
-    animation-name: rotate-img;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-
-    @include respond(phone) {
-     width:60%;
-    }
-    @include respond(phone-xs) {
-     width:60%;
-    }
-}
-  
-  @keyframes rotate-img {
-    0% {
-     -ms-transform: rotate(0deg); /* IE 9 */
-     transform: rotate(0deg);
-    }
-  
-    100% {
-     -ms-transform: rotate(360deg); /* IE 9 */
-     transform: rotate(360deg);
-    }
-  }
