--- a/src/style/sections/_welcome.scss
+++ b/src/style/sections/_welcome.scss
@@ -7,41 +7,65 @@
     }
 }
 
-.fixed-name-container {
-    width: 100%;
-    height: 100%;
+.FixedName #thibault {
     position: fixed;
+    top: 50%;
+    left: 0;
+    width: 50px;
+    height: 50px;
+    margin-top: -25px;
+    padding: 0;
 
-    div:nth-child(1) {
-        position: absolute;
-        left:5rem;
-        top:45%;
+    @include respond(phone) {
+        margin-left: -5px;
+       }
+}
 
-        p {
-            font-size:2.4rem;
-            display: inline-block;
-            transform-origin: 0 0;
-            transform: rotate(90deg);
-            -webkit-transform: rotate(90deg);
-            -moz-transform: rotate(90deg);
-            -o-transform: rotate(90deg); 
-        }
+.FixedName #drevon {
+    position: fixed;
+    top: 50%;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    margin-top: -25px;
+    padding: 0;
 
+    @include respond(phone) {
+     margin-top: -45px;
+     margin-right: -5px;
     }
+}
 
-    div:nth-child(2) {
-        position: absolute;
-        right:-20px;
-        top:55%;
+.FixedName #thibault span {
+    display: block;
+    width: 50px;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    left: 0px;
+    font-size: 20px;
+    text-align: center;
+    -ms-transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    -webkit-transition: left .3s ease-in;
+    -moz-transition: left .3s ease-in;
+    transition: left .3s ease-in;
+}
 
-        p {
-            font-size:2.4rem;
-            display: inline-block;
-            transform-origin: 0 0;
-            transform: rotate(-90deg);
-            -webkit-transform: rotate(-90deg);
-            -moz-transform: rotate(-90deg);
-            -o-transform: rotate(-90deg); 
-        }
-    }
+.FixedName #drevon span {
+    display: block;
+    width: 50px;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 20px;
+    text-align: center;
+    -ms-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+    -webkit-transition: left .3s ease-in;
+    -moz-transition: left .3s ease-in;
+    transition: left .3s ease-in;
 }
