--- a/src/style/sections/_welcome.scss
+++ b/src/style/sections/_welcome.scss
@@ -13,7 +13,7 @@
     left: 0;
     width: 50px;
     height: 50px;
-    margin-top: -25px;
+    margin-top: 0px;
     padding: 0;
 
     @include respond(phone) {
@@ -27,11 +27,11 @@
     right: 0;
     width: 50px;
     height: 50px;
-    margin-top: -25px;
+    margin-top: 0;
     padding: 0;
 
     @include respond(phone) {
-     margin-top: -45px;
+     margin-top: -15px;
      margin-right: -5px;
     }
 }
