--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -14,10 +14,10 @@ $dark-blue-text: #272341; // For Headings
 
 // FONT FAMILY
 $default-font: 'Roboto', sans-serif;
-$fancy-font: 'Overpass', sans-serif;
+$fancy-font: 'Archivo Black', sans-serif;
 
 
-// FONT SIZE
+// FONT SIZEer
 $default-font-size: 1.4rem;
 $big-font-size: 4rem;
 $mid-font-size: 2.5rem;
