--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,11 +9,11 @@
 
 @import './layout/footer';
 @import './layout/sections';
+@import './layout/navbar';
 
 @import './sections/contact';
 @import './sections/hero';
 @import './sections/projects';
-@import './sections/welcome';
 
 @import './templates/projects-template';
 
