--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -1,5 +1,6 @@
 #projects {
-  
+  margin-top:0;
+
   img {
     @include respond(tab-port) {
       object-position: right center !important;
@@ -23,12 +24,12 @@
 
       @include respond(big-desktop) {
         margin-bottom:20rem;
-        margin-top:10rem;
+        margin-top:7.5rem;
        }
 
       @include respond(phone) {
         margin-bottom: 25rem;
-        margin-top: 10rem;
+        margin-top: 7.5rem;
         padding:0px !important;
       }
     }
