--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,23 +1,9 @@
-// COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
-
-
-$white-color: #FFF;
-$black-color: #000;
-
-$dark-grey: #333333;
-$mid-grey: #85818a;
-$light-grey: #E6E6E6;
-
-$dark-blue-text: #272341; // For Headings
-
 // FONT FAMILY
 $default-font: 'Roboto', sans-serif;
 $fancy-font: 'Archivo Black', sans-serif;
 
 
-// FONT SIZEer
+// FONT SIZE
 $default-font-size: 1.4rem;
 $big-font-size: 4rem;
 $mid-font-size: 2.5rem;
