--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,6 +1,4 @@
 .footer {
-  background-color: $white-color;
-  color: $white-color;
   padding: 4.8rem 0;
 
   @include respond(phone) {
@@ -8,19 +6,15 @@
   }
 
   &__text {
-    color: darken(white, 50%);
     font-size: 1.3rem;
 
     a {
-      color: darken(white, 50%);
       font-size: 1.3rem;
       transition: all 0.4s;
       display: inline-block;
-      background-color: $dark-grey;
 
       &:hover,
       &:active {
-        color: $primary-color;
         -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
         box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
       }
@@ -32,7 +26,7 @@
     margin-bottom: 1rem;
     border: 0;
     width: 50%;
-    border-top: 1px solid black;
+    border-top: 1px solid;
     opacity:0.3;
   }
 }
@@ -46,7 +40,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: $dark-grey;
     font-size: 3rem;
     width: 5rem;
     height: 5rem;
