--- a/src/style/layout/_navbar.scss
+++ b/src/style/layout/_navbar.scss
@@ -2,9 +2,6 @@
     padding:0 3rem;
 
     .top-nav {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         width:100%;
         padding:2rem 0;
         border-bottom: 1px solid rgba(0, 0, 0, .1);
@@ -12,14 +9,7 @@
         .logo-container {
             margin:24px 0;
         }
-        
-        .change-color {
-            align-items: center;
-            width:18px;
-            height:18px;
-            border:2px solid $black-color;
-            border-radius: 18px;
-        }
+
     }
     
     nav {
@@ -27,20 +17,14 @@
         border-bottom: 1px solid rgba(0, 0, 0, .1);
     
         a {
-            color:black;
             font-size:1.8rem;
             padding: 14px 34px;
             text-align: center;
-            opacity:0.4;
+            opacity:0.8;
         }
-    
-        a:hover {
-            color:black;
-            opacity:1;
-        }
-    
+
         .active {
-            box-shadow: inset 0px 0px 0px 1px $black-color;
+            box-shadow: inset 0px 0px 0px 1px;
             border-radius:1000px;
         }
     }
